--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "Zappar Limited",
   "license": "MIT",
   "dependencies": {
+    "@zappar/sharing": "^1.1.7",
+    "@zappar/video-recorder": "^1.0.1",
+    "@zappar/webgl-snapshot": "^1.0.1",
     "@zappar/zappar-threejs": "2.0.1",
-    "three": "^0.137.0",
-    "@zappar/webgl-snapshot": "^1.0.1"
+    "three": "^0.137.0"
   },
   "devDependencies": {
     "@types/three": "^0.138.0",
+    "buffer": "^6.0.3",
+    "gh-pages": "^3.1.0",
     "parcel": "^2.7.0",
-    "gh-pages": "^3.1.0"
+    "process": "^0.11.10"
   }
 }
